--- a/app/build.gradle
+++ b/app/build.gradle
@@ -113,3 +113,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 }
+kapt {
+    correctErrorTypes true
+}
